[package]
name = "secretMgmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.26", features = ["derive"] }
libsodium-sys-stable = "1.20.4"
rand_core = "0.6"
x25519-dalek = { git="https://github.com/dalek-cryptography/x25519-dalek", features = ["static_secrets"] }
chacha20poly1305 = "0.10.1"
aws-nitro-enclaves-cose = "0.5.0"
hyper = { version = "0.14.29", features = ["client", "http1", "http2", "tcp"] }
serde_cbor = "0.11.2"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"


[[bin]]
name = "keygen"
path = "src/keygen.rs"

[[bin]]
name = "loader"
path = "src/loader.rs"

[[bin]]
name = "secret_manager"
path = "src/secret_manager.rs"